hphp/test/zend7/Zend/tests/bug36071.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug36071.php on line 2